components/alloy-edge/configs/home/ingress-telemetry.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: telemetry
  namespace: alloy-edge
  annotations:
    tailscale.com/proxy-group: private-ingress
    tailscale.com/tags: tag:k8s-private
    tailscale.com/http-redirect: "true"
spec:
  ingressClassName: tailscale
  tls:
    - hosts:
        - telemetry
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: alloy-edge
                port:
                  number: 4318
